--- a/index.html
+++ b/index.html
@@ -472,21 +472,22 @@
         <div class="footer-right-cont">
           <p class="footer-soc-title">Subscribe</p>
           <div class="footer-input-wrap">
-            <label for="email-footer"></label>
-            <input
-              type="email"
-              name="subscribe-email"
-              id="email-footer"
-              class="input-footer"
-              placeholder="Email"
-            />
-
-            <button type="submit" class="footer-input-btn">
-              Subscribe
-              <svg class="footer-input-icon" width="24" height="20">
-                <use href="./images/icons.svg#icon-subscribe"></use>
-              </svg>
-            </button>
+            <form class="footer-email-form">
+              <label for="email-footer"
+                ><input
+                  type="email"
+                  name="subscribe-email"
+                  id="email-footer"
+                  class="input-footer"
+                  placeholder="Email"
+              /></label>
+              <button type="submit" class="footer-input-btn">
+                Subscribe
+                <svg class="footer-input-icon" width="24" height="20">
+                  <use href="./images/icons.svg#icon-subscribe"></use>
+                </svg>
+              </button>
+            </form>
           </div>
         </div>
       </div>
