--- a/index.html
+++ b/index.html
@@ -472,17 +472,17 @@
         <div class="footer-right-cont">
           <p class="footer-soc-title">Subscribe</p>
           <form class="footer-email-form">
-            <label for="email-footer"
+            <label for="email-footer" class="footer-email-label"
               ><input
                 type="email"
                 name="subscribe-email"
                 id="email-footer"
                 class="input-footer"
-                placeholder="Email"
+                placeholder="E-mail"
             /></label>
             <button type="submit" class="footer-input-btn">
               Subscribe
-              <svg class="footer-input-icon" width="24" height="20">
+              <svg class="footer-input-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-subscribe"></use>
               </svg>
             </button>
@@ -493,7 +493,7 @@
     <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close-btn">
-          <svg width="8px" height="8px" class="modal-close-icon">
+          <svg width="8" height="8" class="modal-close-icon">
             <use href="./images/icons.svg#icon-exit"></use>
           </svg>
         </button>
