--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg width="8" height="8" class="modal-close-icon">
@@ -499,41 +499,47 @@
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-          <label for="modal-user-name" class="modal-label">Name</label>
-          <div class="modal-input-wrap">
-            <input
-              type="text"
-              id="modal-user-name"
-              name="user-name"
-              class="modal-input"
-            />
-            <svg class="input-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-user-name"></use>
-            </svg>
+          <div class="modal-form-item">
+            <label for="modal-user-name" class="modal-label">Name</label>
+            <div class="modal-input-wrap">
+              <input
+                type="text"
+                id="modal-user-name"
+                name="user-name"
+                class="modal-input"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-user-name"></use>
+              </svg>
+            </div>
           </div>
-          <label for="modal-user-tel" class="modal-label">Phone</label>
-          <div class="modal-input-wrap">
-            <input
-              type="tel"
-              id="modal-user-tel"
-              name="user-phone"
-              class="modal-input"
-            />
-            <svg class="input-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-phone"></use>
-            </svg>
+          <div class="modal-form-item">
+            <label for="modal-user-tel" class="modal-label">Phone</label>
+            <div class="modal-input-wrap">
+              <input
+                type="tel"
+                id="modal-user-tel"
+                name="user-phone"
+                class="modal-input"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
           </div>
-          <label for="modal-user-email" class="modal-label">Email</label>
-          <div class="modal-input-wrap">
-            <input
-              type="email"
-              id="modal-user-email"
-              name="user-email"
-              class="modal-input"
-            />
-            <svg class="input-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-email"></use>
-            </svg>
+          <div class="modal-form-item">
+            <label for="modal-user-email" class="modal-label">Email</label>
+            <div class="modal-input-wrap">
+              <input
+                type="email"
+                id="modal-user-email"
+                name="user-email"
+                class="modal-input"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
           </div>
           <div class="modal-comment-wrap">
             <label for="comment-area" class="modal-label">Comment</label>
