--- a/index.html
+++ b/index.html
@@ -500,11 +500,11 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-form-item">
-            <label for="modal-user-name" class="modal-label">Name</label>
+            <label for="user-name" class="modal-label">Name</label>
             <div class="modal-input-wrap">
               <input
                 type="text"
-                id="modal-user-name"
+                id="user-name"
                 name="user-name"
                 class="modal-input"
               />
@@ -542,10 +542,10 @@
             </div>
           </div>
           <div class="modal-comment-wrap">
-            <label for="comment-area" class="modal-label">Comment</label>
+            <label for="user-comment" class="modal-label">Comment</label>
             <textarea
               name="comment"
-              id="comment-area"
+              id="user-comment"
               class="modal-textarea"
               placeholder="Text input"
             ></textarea>
@@ -554,11 +554,11 @@
             <input
               type="checkbox"
               name="privacy"
-              id="privacy"
-              value="yes"
+              id="user-privacy"
+              value="true"
               class="privacy-check visually-hidden"
             />
-            <label for="privacy" class="privacy-text"
+            <label for="user-privacy" class="privacy-text"
               ><span class="fake-checkbox"
                 ><svg class="icon-privacy-check" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use></svg></span
