--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
           <div class="modal-comment-wrap">
             <label for="user-comment" class="modal-label">Comment</label>
             <textarea
-              name="comment"
+              name="user-comment"
               id="user-comment"
               class="modal-textarea"
               placeholder="Text input"
@@ -553,7 +553,7 @@
           <div class="privacy-wrap">
             <input
               type="checkbox"
-              name="privacy"
+              name="user-privacy"
               id="user-privacy"
               value="true"
               class="privacy-check visually-hidden"
